--- a/app/src/main/res/layout/home_screen_fragment.xml
+++ b/app/src/main/res/layout/home_screen_fragment.xml
@@ -1,36 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <data>
+
+
+    </data>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <Button
-                android:id="@+id/home_fragment_button_tracked"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Отслеживаемые" />
-
-            <Button
-                android:id="@+id/home_fragment_button_all_stock"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Все акции" />
-
-        </LinearLayout>
+        <TextView
+            android:id="@+id/text_error"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Error"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/home_fragment_list_stocks"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="#F36E6E">
 
         </androidx.recyclerview.widget.RecyclerView>
 
