--- a/app/src/main/res/layout/all_list_stock_fragment.xml
+++ b/app/src/main/res/layout/all_list_stock_fragment.xml
@@ -19,7 +19,7 @@
             android:text="Error"/>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/home_fragment_list_stocks"
+            android:id="@+id/all_list_stocks"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#F36E6E">
