--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,17 +5,14 @@
 
     <data>
 
-
     </data>
-
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".application.MainActivity">
+        tools:context=".screen.MainActivity">
 
-
-        <androidx.fragment.app.FragmentContainerView
+        <fragment
             android:id="@+id/fragment_container_view"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
@@ -24,5 +21,4 @@
             app:navGraph="@navigation/nav_graph" />
 
     </LinearLayout>
-
 </layout>
