--- a/app/src/main/res/layout/list_item_stock.xml
+++ b/app/src/main/res/layout/list_item_stock.xml
@@ -6,8 +6,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:background="@drawable/item_list_style_background"
         android:orientation="vertical"
+        android:background="@color/black"
         tools:background="#FFFB03"
         tools:ignore="MissingConstraints">
 
