--- a/app/src/main/res/layout/activity_primary.xml
+++ b/app/src/main/res/layout/activity_primary.xml
@@ -10,11 +10,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".screen.PrimaryActivity">
+        tools:context=".screen.activity.PrimaryActivity">
 
     <fragment
         android:id="@+id/fragment_container_view"
-        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:name ="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:defaultNavHost="true"
