--- a/app/src/main/res/layout/all_list_stock_fragment.xml
+++ b/app/src/main/res/layout/all_list_stock_fragment.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -16,24 +16,34 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:theme="@style/StyleText">
+
+            <ProgressBar
+                android:id="@+id/progressBarListStockFragment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="gone"
+                tools:visibility="visible" />
 
             <TextView
                 android:id="@+id/text_error"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Error" />
+                android:layout_gravity="center"
+                android:text="Error"
+                android:textColor="@color/error_text"
+                android:textSize="24dp" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/all_list_stocks"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:background="#F36E6E">
+                android:layout_height="match_parent">
             </androidx.recyclerview.widget.RecyclerView>
 
         </LinearLayout>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
 
 </layout>
