--- a/app/src/main/res/layout/details_stokc_fragment.xml
+++ b/app/src/main/res/layout/details_stokc_fragment.xml
@@ -11,16 +11,24 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".screen.SplashActivity">
+        tools:context=".screen.activity.SplashActivity">
+
+        <ProgressBar
+            android:id="@+id/progressBarDetailsStockFragment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            tools:visibility="visible" />
 
         <TextView
             android:id="@+id/symbol_stock_details_fragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            android:textColor="@color/symbol_text_details_fragment"
             android:textSize="@dimen/size_text_details"
             android:textStyle="bold"
+            android:theme="@style/StyleText"
             tools:ignore="SpUsage"
             tools:text="Symbol" />
 
@@ -47,7 +55,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="15dp">
+            android:padding="15dp"
+            android:theme="@style/DetailsFragmentTextInfo">
 
             <TextView
                 android:id="@+id/company_name"
@@ -55,7 +64,6 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:text="@string/company_name"
-                android:textColor="#5C5C5C"
                 android:textSize="@dimen/size_text_details"
                 android:textStyle="bold"
                 tools:ignore="SpUsage" />
@@ -66,7 +74,6 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:textAlignment="textEnd"
-                android:textColor="#8C8C8C"
                 android:textSize="@dimen/size_text_details"
                 android:textStyle="bold"
                 tools:ignore="SpUsage"
@@ -78,25 +85,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="15dp">
+            android:padding="15dp"
+            android:theme="@style/DetailsFragmentTextInfo">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:text="@string/exchange"
-                android:textColor="#8C8C8C"
                 android:textSize="@dimen/size_text_details"
                 android:textStyle="bold"
                 tools:ignore="SpUsage" />
 
             <TextView
                 android:id="@+id/name_exchange_details_fragment"
-                android:layout_width="200dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:textAlignment="textEnd"
-                android:textColor="#8C8C8C"
                 android:textSize="@dimen/size_text_details"
                 android:textStyle="bold"
                 tools:ignore="SpUsage"
@@ -108,25 +114,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="15dp">
+            android:padding="15dp"
+            android:theme="@style/DetailsFragmentTextInfo">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:text="@string/currency"
-                android:textColor="#8C8C8C"
                 android:textSize="@dimen/size_text_details"
                 android:textStyle="bold"
                 tools:ignore="SpUsage" />
 
             <TextView
                 android:id="@+id/name_currency_details_fragment"
-                android:layout_width="200dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:textAlignment="textEnd"
-                android:textColor="#8C8C8C"
                 android:textSize="@dimen/size_text_details"
                 android:textStyle="bold"
                 tools:ignore="SpUsage"
@@ -138,14 +143,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="15dp">
+            android:padding="15dp"
+            android:theme="@style/DetailsFragmentTextInfo">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:text="@string/date"
-                android:textColor="#8C8C8C"
                 android:textSize="@dimen/size_text_details"
                 android:textStyle="bold"
                 tools:ignore="SpUsage" />
@@ -155,7 +160,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:textColor="#8C8C8C"
                 android:textSize="@dimen/size_text_details"
                 android:textStyle="bold"
                 tools:ignore="SpUsage"
@@ -166,40 +170,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:textColor="#8C8C8C"
                 android:textSize="@dimen/size_text_details"
                 android:textStyle="bold"
                 tools:ignore="RelativeOverlap,SpUsage"
                 tools:text="Price" />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="15dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:text="@string/real_price"
-                android:textColor="#8C8C8C"
-                android:textSize="@dimen/size_text_details"
-                android:textStyle="bold"
-                tools:ignore="SpUsage" />
-
-            <TextView
-                android:id="@+id/real_price_details_fragment"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:textColor="#8C8C8C"
-                android:textSize="@dimen/size_text_details"
-                android:textStyle="bold"
-                tools:ignore="SpUsage"
-                tools:text="Real price" />
 
         </RelativeLayout>
 
