--- a/app/src/main/res/layout/list_item_stock.xml
+++ b/app/src/main/res/layout/list_item_stock.xml
@@ -1,36 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:orientation="vertical"
-        android:background="@color/black"
-        tools:background="#FFFB03"
-        tools:ignore="MissingConstraints">
+        android:elevation="100dp"
+        app:cardCornerRadius="10dp"
+        android:layout_margin="2dp">
 
-        <TextView
-            android:id="@+id/symbol_stock"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="5dp"
-            android:textColor="@color/cardview_light_background"
-            android:textSize="20dp"
-            tools:text="MSFT" />
+            android:orientation="vertical"
+            android:theme="@style/ItemStock"
+            tools:background="#D32F2F"
+            tools:ignore="MissingConstraints">
 
-        <TextView
-            android:id="@+id/full_name_stock"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginBottom="5dp"
-            android:textColor="@color/cardview_light_background"
-            android:textSize="30dp"
-            tools:text="Microsoft Corporation" />
+            <TextView
+                android:id="@+id/symbol_stock"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="5dp"
+                android:textSize="20dp"
+                tools:text="MSFT" />
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/full_name_stock"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="5dp"
+
+                android:textSize="30dp"
+                tools:text="Microsoft Corporation" />
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 
 </layout>
