--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -3,7 +3,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/settings"
-        android:name="com.example.stockprice.screen.SettingsActivity$SettingsFragment"
+        android:name="com.example.stockprice.screen.activity.SettingsActivity$SettingsFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
