--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
+    <color name="green_900">#1B5E20</color>
+    <color name="green_400">#66BB6A</color>
+    <color name="green_500">#4CAF50</color>
     <color name="green_800">#2E7D32</color>
-    <color name="green_600">#E643A047</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="green_200">#A5D6A7</color>
+    <color name="white">#FFFFFF</color>
     <color name="black">#FF000000</color>
-    <color name="light_green">#00E676</color>
-    <color name="symbol_text_details_fragment">#8C8C8C</color>
-    <color name="text_details_fragment">#000000</color>
+    <color name="error_text">#B00020</color>
 </resources>
