--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,35 +2,34 @@
     <!-- Base application theme. -->
     <style name="Theme.StockPrice" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
-        <!-- Primary brand color. -->
         <item name="colorPrimary">@color/green_800</item>
-        <item name="colorPrimaryVariant">@color/green_600</item>
-        <item name="colorOnPrimary">@color/light_green</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Primary text color. -->
-
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        <item name="colorPrimaryVariant">@color/green_900</item>
+        <item name="android:statusBarColor" tools:ignore="ObsoleteSdkInt" tools:targetApi="l">
+            @color/green_900
+        </item>
     </style>
 
+    <style name="StyleText">
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="ItemStock">
+        <item name="android:background">@color/green_400</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="DetailsFragmentTextInfo">
+        <item name="android:textColor">@color/black</item>
+        <item name="background">@color/green_500</item>
+    </style>
+
+    <!-- SplashScreenTheme. -->
     <style name="SplashTheme" parent="Theme.MaterialComponents.NoActionBar">
         <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
-        <!-- Primary brand color. -->
         <item name="colorPrimary">@color/green_800</item>
-        <item name="colorPrimaryVariant">@color/green_600</item>
-        <item name="colorOnPrimary">@color/light_green</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
+        <item name="colorPrimaryVariant">@color/green_900</item>
         <item name="android:statusBarColor" tools:ignore="ObsoleteSdkInt" tools:targetApi="l">
-            ?attr/colorPrimaryVariant
+            @color/green_900
         </item>
-        <!-- Customize your theme here. -->
     </style>
 </resources>
