--- a/app/src/main/res/layout/all_list_stock_fragment.xml
+++ b/app/src/main/res/layout/all_list_stock_fragment.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-
-    <data>
-
-    </data>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="match_parent"
+     android:layout_width="match_parent">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/refresh"
@@ -45,4 +42,4 @@
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-</layout>
+</LinearLayout>
