--- a/app/src/main/res/layout/list_item_stock.xml
+++ b/app/src/main/res/layout/list_item_stock.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -41,4 +43,4 @@
 
     </androidx.cardview.widget.CardView>
 
-</layout>
+</LinearLayout>
